--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --base-color: rgb(250, 250, 250);
+  --primary-button-color: rgb(32, 58, 76);
+  --primary-button-hover-color: rgb(95, 180, 162);
+  --primary-button-disabled-color: rgb(234, 234, 235);
+  --gray-dark-blue: rgba(27, 49, 64, 0.967);
+  --dark-green: rgb(78, 147, 132);
+  --gray: rgb(222, 222, 224);
+
+  --display-font: "Ibarra Real Nova";
+  --body-font: "Public Sans Regular";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+html,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+  background-color: var(--base-color);
 }
