--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --gray-dark-blue: rgba(27, 49, 64, 0.967);
   --dark-green: rgb(78, 147, 132);
   --gray: rgb(222, 222, 224);
+  --dark-gray: rgb(165, 165, 165);
+
 
   --display-font: "Ibarra Real Nova";
   --body-font: "Public Sans Regular";
