design changes based on feedback

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --dark-green: rgb(78, 147, 132);
   --gray: rgb(222, 222, 224);
   --dark-gray: rgb(165, 165, 165);
-
+  --gray-font: rgb(96, 94, 94);
 
   --display-font: "Ibarra Real Nova";
   --body-font: "Public Sans Regular";
