--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --gray: rgb(222, 222, 224);
   --dark-gray: rgb(165, 165, 165);
   --gray-font: rgb(96, 94, 94);
+  --red: rgb(156, 40, 40);
 
   --display-font: "Ibarra Real Nova";
   --body-font: "Public Sans Regular";
